# maps4society

./: CMakeLists.txt  README.md
environment/cmake/: FindBoost.cmake  FindFern.cmake  FindPcrtree2.cmake  Maps4SocietyCompiler.cmake  Maps4SocietyConfiguration.cmake  Maps4SocietyExternal.cmake  m4s.cmake
environment/script/: build_3rd_party_software.sh  build_gcc.sh  peacock.sh
source/: CMakeLists.txt
source/m4s/: CMakeLists.txt
source/m4s/python/: CMakeLists.txt  execution_policy.cc  execution_policy.h  pcraster_multicore.cc
source/m4s/python/focal/: CMakeLists.txt  focal.h  slope.cc  slope.h  window4total.cc
source/m4s/python/local/: CMakeLists.txt  abs.cc  acos.cc  add.cc  add.h  and.cc  and.h  asin.cc  atan.cc  cos.cc  cover.cc  cover.h  defined.cc  div.cc  div.h  equal.cc  fac.cc  greater.cc  greater.h  greater_equal.cc  greater_equal.h  ifthen.cc  ifthenelse.cc  less.cc  less.h  less_equal.cc  less_equal.h  ln.cc  local.h  log10.cc  maximum.cc  minimum.cc  mul.cc  mul.h  not.cc  or.cc  or.h  policies.h  pow.cc  pow.h  (+14 more)
source/m4s/python/scripts/: CMakeLists.txt  __init__.py.in  pcraster_multicore.py.in  pcraster_multicore_operations.py.in
source/m4s/python/total/: CMakeLists.txt  mapmaximum.cc  mapminimum.cc  maptotal.cc  maptotal.h  total.h
source/m4s/python/type_conversion/: CMakeLists.txt  boolean.cc  nominal.cc  ordinal.cc  scalar.cc  type_conversion.h
source/m4s/sources/: CMakeLists.txt
source/m4s/sources/python/: CMakeLists.txt  execution_policy.cc  execution_policy.h  pcraster_multicore.cc
source/m4s/sources/python/local/: local.h  pow.h
source/m4s/sources/wrapper/: CMakeLists.txt  multicore_field.h  multicore_field_input_policy.h  multicore_field_output_policy.h  multicore_field_traits.h
source/m4s/wrapper/: CMakeLists.txt  multicore_field.h  multicore_field_input_policy.h  multicore_field_output_policy.h  multicore_field_traits.h  multicore_nonspatial.h  multicore_nonspatial_input_policy.h  multicore_nonspatial_output_policy.h  multicore_nonspatial_traits.h
source/m4s/wrapper/argument_customization_points/: multicore_nonspatial.h  multicore_spatial.h
source/m4s/wrapper/argument_traits/: multicore_nonspatial.h  multicore_spatial.h
source/m4s/wrapper/datatype_customization_points/: multicore_nonspatial.h  multicore_spatial.h
source/m4s/wrapper/datatype_traits/: multicore_nonspatial.h  multicore_spatial.h
source/performance/: .gitignore  add_timer_case.py  configuration.py  create_plots.sh  print_quotients.sh  slope_timer_case.py  sqrt_timer_case.py  timer_case.py  timer_data.py  timer_runner.py
source/python/m4s/: raster.py
source/python/m4s/debug/: visualize.py
source/python/m4s/operation/: spread.py
source/python/test/: raster_test.py  spread_test.py
