INCLUDE_DIRECTORIES(
  #${_PCRTREE2_ROOT_INCLUDE}/pcraster_model_engine
  #${_PCRTREE2_ROOT_INCLUDE}/include
  #${_PCRTREE2_ROOT_INCLUDE}/pcrcom
  ${PCRTREE2_INCLUDE_DIRS}
)

# ADD_LIBRARY(multicore_field
#   STATIC
#     multicore_field
# )
# 
# SET_TARGET_PROPERTIES(multicore_field PROPERTIES LINKER_LANGUAGE CXX)
